# GPUQuotientFilters

./: CMakeLists.txt  LICENSE  README.md
rankSelectQuotientFilter/CPU_version/: .RSQF.cpp.swp  CPURSQFBatchInsertPerf.cpp  CPURSQFBatchLookupPerf.cpp  CPURSQFInsertPerf.cpp  CPURSQFLookupPerf.cpp  RSQF.cpp  RSQF.h  testRSQF.cpp
rankSelectQuotientFilter/GPU_version/: .countingQF_GPU.cu.swp  GPURSQFBatchInsertsPerf.cu  GPURSQFBatchLookupsPerf.cu  GPURSQFInsertsPerf.cu  GPURSQFLookupsPerf.cu  RSQF.cu  RSQF.cuh  testGPURSQF.cu
standardQuotientFilter/CPU_version/: CPUBatchInsertPerf.cpp  CPUBatchLookupPerf.cpp  CPUInsertPerf.cpp  CPULookupPerf.cpp  CPUPerfQuotientFilter.cpp  CPUTestQuotientFilter.cpp  quotientFilter.cpp  quotientFilter.h
standardQuotientFilter/GPU_version/: GPUBatchInserts.cu  GPUBatchLookups.cu  GPUInsertsPerf.cu  GPULookupsPerf.cu  bulkBuildSegmentedLayoutPerf.cu  bulkBuildSegmentedLayoutTest.cu  bulkBuildSequentialShiftsPerf.cu  bulkBuildSequentialShiftsTest.cu  bulkBuildViaMergingPerf.cu  bulkBuildViaMergingTest.cu  deletesBatchPerf.cu  deletesPerf.cu  deletesTest.cu  insertViaMergePerf.cu  insertViaMergeTest.cu  merge2FiltersPerf.cu  merge2FiltersTest.cu  quotientFilter.cu  quotientFilter.cuh  superclusterTest.cu
